k8s/storage.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: cuisineensemble
